Changed padding and margins. Brought back the hidden overflow in the "No scrollbars" variant. Changes in the Info.plist file to match the original names from trunk. Some comments and minor fixes added.

--- a/Pretty Simple.adiummessagestyle/Contents/Resources/Main.css
+++ b/Pretty Simple.adiummessagestyle/Contents/Resources/Main.css
@@ -17,7 +17,8 @@ body {
 	right: 0;
 	overflow: auto;
 	overflow-x: hidden;
-	padding: 0 4px;
+	padding: 0 0px;
+	margin: 0 4px;
 }
 
 #Chat {
@@ -95,6 +96,7 @@ span.timeC, div.status span.time {
 	display: block;
 	float: right;
 	padding-top: 6px;
+	margin-left: 10px;
 	font-size: 10px;
 	color: rgba(255, 255, 255, 0.5);
 }
