--- a/Pretty Simple.adiummessagestyle/Contents/Resources/Variants/No scrollbars.css
+++ b/Pretty Simple.adiummessagestyle/Contents/Resources/Variants/No scrollbars.css
@@ -1,6 +1,6 @@
 @import url(../Main.css);
 
-body {
+#container {
 	overflow: hidden;
 	margin: 10px 0;
 }
